styles.css
nav {
    background-color: #800000;
    height: 50px;
    text-align: center;
}

nav a {
    font-size: 2em;
    padding-left: 10px;
    padding-right: 10px;
    color: white;
}

footer {
    background-color: #800000;
    color: white;
}

div {
    background-color: lightgray;
    text-align: left;
    padding-bottom: 20px;
}

h2 {
    background-color: #800000;
    color: white;
    height: 30px;
    margin-bottom: 0px;
}

h3 {
    background-color: gray;
    height: 20px;
    margin-bottom: 0px;
}

#indexDiv {
    text-align: center;
}

img {
    width: 250px;
    height: auto;
    margin: auto;
}

